2004-07-15 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCProject.m: 
	(projectFileForFile:forKey:): Fix recognizing of subproject files.
	
	* Library/PCProjectManager.m: 
	(addProjectFiles):ditto.
	
	* Update all GORM files with latest CVS GORM version.
	
	* Resources/Preferences.gorm: Fix Auto-Save slider.
	
2004-07-14 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCButton.m: PCButtonCell removed.
	(initWithFrame:): [self setCell:] removed. [_cell setGradientType:]
	added.
	
2004-07-04 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCProject.m:
	(projectFileFromFile:forKey:): If adding files from subproject to
	project add it with relative path to project's one.

	* Modules/ApplicationProject/PCAppProject.m:
	(writeMakefile): Do not add "Resources/" prefix if resource file
	is part of subproject.
	
	* Modules/BundleProject/PCBundleProject.m: 
	(writeMakefile): ditto.
	
	* Modules/LibraryProject/PCLibProject.m: 
	(writeMakefile): ditto.
	
	* Modules/RenaissanceProject/PCRenaissanceProject.m: 
	(writeMakefile): ditto.

	* Modules/ToolProject/PCToolProject.m: 
	(writeMakefile): ditto.
	
2004-07-03 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCProjectManager.m:
	(addProjectFiles:): Don't copy files that already in project 
	directory structure. This allows adding of subproject's files to
	project resources.

	* Across the ProjectCenter: Comment out calls for PCLog*. This is
	speedup PC.
	
2004-06-22 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCFileManager.m:
	(panel:shouldShowFilename:): Treat .gorm dirs not as dirs.
	
	* Library/PCProject.m:
	(doesAcceptFile:forKey:): Check existance of file in
	sourceFileKeys and resourceFileKeys.
	
	* Modules/*: Made cleanup in sourceFileKeys, resourceFileKeys and
	otherKeys methods.
	
2004-06-21 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCFileManager.m: 
	(panel:shouldShowFilename:): Fix filtering out files already 
	included in project. Optimized.

	* GNUmakefile: Change VERSION var to 0.4.1pre.
	