@@ -41,7 +41,7 @@
 ADDITIONAL_CPPFLAGS +=
 
 # Additional flags to pass to the Objective-C compiler
-ADDITIONAL_OBJCFLAGS +=
+ADDITIONAL_OBJCFLAGS += -Wall -Werror
 
 # Additional flags to pass to the C compiler
 ADDITIONAL_CFLAGS +=
