@@ -25,7 +25,14 @@
 #include "PCButton.h"
 #include "PCDefines.h"
 
+#include "AppKit/NSBezierPath.h"
+#include "GNUstepGUI/GSTrackingRect.h"
+
 @implementation PCButton
+
+// ============================================================================
+// ==== Main
+// ============================================================================
 
 - (id)initWithFrame:(NSRect)frameRect
 {
@@ -36,254 +43,317 @@
 
   ttTimer = nil;
   ttWindow = nil;
+  ttTitleAttrs = [[NSMutableDictionary alloc] init];
+  [ttTitleAttrs setObject:[NSFont systemFontOfSize:10.0]
+ 	           forKey:NSFontAttributeName];
+  ttBackground = [NSColor colorWithDeviceRed:1.0 green:1.0 blue:0.90 alpha:1.0];
+  RETAIN(ttBackground);
+
+  [[NSNotificationCenter defaultCenter] 
+    addObserver:self
+       selector:@selector(_updateTrackingRects:)
+           name:NSViewFrameDidChangeNotification
+         object:[[self window] contentView]];
 
   return self;
 }
 
 - (void)dealloc
 {
-  if (_hasTooltip)
+  if (_hasTooltips)
     {
-      [[self superview] removeTrackingRect:tRectTag];
-      [ttTimer invalidate];
-      ttTimer = nil;
-      RELEASE(ttTimer);
-    }
-
-  if (ttWindow != nil)
-    {
+      [self removeAllToolTips];
+      RELEASE(ttTitleAttrs);
+      RELEASE(ttBackground);
       RELEASE(ttWindow);
     }
 
   [super dealloc];
 }
 
-- (void)setFrame:(NSRect)frameRect
-{
-//  NSLog (@"setFrame");
-  [super setFrame:frameRect];
+// ============================================================================
+// ==== Private methods
+// ============================================================================
 
-  if (_hasTooltip)
+- (void)_updateTrackingRects:(NSNotification *)aNotif
+{
+  NSTrackingRectTag tag;
+  NSRect            rect;
+  NSString          *string = nil;
+  int               i, j;
+  GSTrackingRect    *tr = nil;
+
+  if (_hasTooltips == NO)
     {
-      [self updateTrackingRect];
+      return;
+    }
+
+  j = [_tracking_rects count];
+  for (i = 0; i < j; i++)
+    {
+      tr = [_tracking_rects objectAtIndex:i];
+
+//      NSLog(@"PCButton: tr: %i data: %@", tr->tag, tr->user_data);
+
+      string = [(NSString *)tr->user_data copy];
+
+      rect = [self frame];
+      rect.origin.x = 0;
+      rect.origin.y = 0;
+      tag = [self addTrackingRect:rect
+	                    owner:self
+	                 userData:string
+	             assumeInside:NO];
+
+      if (tr->tag == mainToolTip)
+	{
+	  mainToolTip = tag;
+	}
+
+      [self removeTrackingRect:tr->tag];
+      RELEASE(string);
     }
 }
 
-- (void)setShowTooltip:(BOOL)yn
+- (void)_invalidateTimer
 {
-  _hasTooltip = yn;
-  if (_hasTooltip)
+  if (ttTimer == nil)
     {
-      tRectTag = [[self superview] addTrackingRect:[self frame]
-	                                     owner:self
-                                          userData:nil
-                                      assumeInside:NO];
-      [[self window] setAcceptsMouseMovedEvents:YES];
+      return;
+    }
+
+//  NSLog(@"_invalidateTimer");
+  if ([ttTimer isValid])
+    {
+      [ttTimer invalidate];
+    }
+  ttTimer = nil;
+}
+
+- (void)_closeToolTipWindow
+{
+  if (ttWindow)
+    {
+      [ttWindow close];
+      ttWindow = nil;
     }
 }
 
-- (void)updateTrackingRect
+- (void)_drawToolTip:(NSAttributedString *)title
 {
-  [[self superview] removeTrackingRect:tRectTag];
-  tRectTag = [[self superview] addTrackingRect:[self frame]
-                                         owner:self
-                                      userData:nil
-                                  assumeInside:NO];
+  NSRectEdge sides[] = {NSMinXEdge, NSMaxYEdge, NSMaxXEdge, NSMinYEdge};
+  NSColor    *black = [NSColor blackColor];
+  NSColor    *colors[] = {black, black, black, black};
+  NSRect     bounds = [[ttWindow contentView] bounds];
+  NSRect     titleRect;
+
+  titleRect = [ttWindow frame];
+  titleRect.origin.x = 2;
+  titleRect.origin.y = -2;
+
+  [[ttWindow contentView] lockFocus];
+
+  [title drawInRect:titleRect];
+  NSDrawColorTiledRects(bounds, bounds, sides, colors, 4);
+
+  [[ttWindow contentView] unlockFocus];
 }
 
-- (void)showTooltip:(NSTimer *)timer
+- (void)_showTooltip:(NSTimer *)timer
 {
-  NSAttributedString *attributedTitle = [self attributedTitle];
-  NSSize             titleSize = [attributedTitle size];
+  NSString *ttText = [timer userInfo];
+  
+  [self _invalidateTimer];
 
-//  NSLog (@"showTooltip");
+//  NSLog(@"showTooltip: %@", ttText);
+//  NSLog(@"toolTips: %@", toolTips);
+
   if (ttWindow == nil)
     {
-      NSTextField *ttText;
-      NSRect      windowRect;
-      NSRect      titleRect;
-      NSRect      contentRect;
+      NSAttributedString *attributedTitle = nil;
+      NSSize             titleSize;
+      NSPoint            mouseLocation = [NSEvent mouseLocation];
+      NSRect             windowRect;
 
-      windowRect = NSMakeRect(mouseLocation.x,
-			      mouseLocation.y-16-(titleSize.height+3),
-	     		      titleSize.width+10, titleSize.height+3);
+      attributedTitle = 
+	[[NSAttributedString alloc] initWithString:ttText
+	                                attributes:ttTitleAttrs];
+      titleSize = [attributedTitle size];
 
-      titleRect = NSMakeRect(0,0, titleSize.width+10,titleSize.height+3);
-/*      windowRect = NSMakeRect(mouseLocation.x, 
-			      mouseLocation.y-16-(titleSize.height+3),
-	     		      titleSize.width, titleSize.height);
-      titleRect = NSMakeRect(0,0, titleSize.width,titleSize.height);*/
-      contentRect = [NSWindow frameRectForContentRect:titleRect 
-	                                    styleMask:NSBorderlessWindowMask];
+      // Window
+      windowRect = NSMakeRect(mouseLocation.x + 8,
+			      mouseLocation.y - 16 - (titleSize.height+3),
+			      titleSize.width + 4, titleSize.height + 4);
 
       ttWindow = [[NSWindow alloc] initWithContentRect:windowRect
 	                                     styleMask:NSBorderlessWindowMask
 					       backing:NSBackingStoreRetained
 					         defer:YES];
+      [ttWindow setBackgroundColor:ttBackground];
+      [ttWindow setReleasedWhenClosed:YES];
       [ttWindow setExcludedFromWindowsMenu:YES];
+      [ttWindow setLevel:NSStatusWindowLevel];
 
-      ttText = [[NSTextField alloc] initWithFrame:contentRect];
-      [ttText setEditable:NO];
-      [ttText setSelectable:NO];
-      [ttText setBezeled:NO];
-      [ttText setBordered:YES];
-      [ttText setBackgroundColor:[NSColor colorWithDeviceRed:1.0
-                                                       green:1.0
-						        blue:0.80
-						       alpha:1.0]];
-      [ttText setFont:[self font]];
-      [ttText setStringValue:[self title]];
-      [[ttWindow contentView] addSubview:ttText];
-    }
-  else if (![ttWindow isVisible])
-    {
-      [ttWindow setFrameOrigin:
-	NSMakePoint(mouseLocation.x,
-		    mouseLocation.y-16-(titleSize.height+3))];
-      [ttWindow orderFront:self];
+      [ttWindow orderFront:nil];
+
+      [self _drawToolTip:attributedTitle];
+      RELEASE(attributedTitle);
     }
 }
 
+// ============================================================================
+// ==== Tool Tips
+// ============================================================================
+
 - (void)mouseEntered:(NSEvent *)theEvent
 {
- // NSLog (@"mouseEntered");
+  NSLog (@"mouseEntered");
 
   if (ttTimer == nil)
     {
-      ttTimer = [NSTimer
-	scheduledTimerWithTimeInterval:0.5
-	                        target:self
-			      selector:@selector(showTooltip:)
-			      userInfo:nil
-                               repeats:YES];
+//      NSLog (@"mouseEntered: setTimer: %@", data);
+      ttTimer = [NSTimer scheduledTimerWithTimeInterval:0.5
+	                                         target:self
+			                       selector:@selector(_showTooltip:)
+			                       userInfo:[theEvent userData]
+                                                repeats:YES];
+      [[self window] setAcceptsMouseMovedEvents:YES];
     }
 }
 
 - (void)mouseExited:(NSEvent *)theEvent
 {
 //  NSLog (@"mouseExited");
-
-  if (ttTimer != nil)
-    {
-//      NSLog (@"-- invalidate");
-      [ttTimer invalidate];
-      ttTimer = nil;
-
-      if (ttWindow && [ttWindow isVisible])
-	{
-	  [ttWindow orderOut:self];
-	}
-    }
+  [self _invalidateTimer];
+  [self _closeToolTipWindow];
+  [[self window] setAcceptsMouseMovedEvents:NO];
 }
 
 - (void)mouseDown:(NSEvent *)theEvent
 {
 //  NSLog (@"mouseDown");
-
-  if (ttTimer != nil)
-    {
-//      NSLog (@"-- invalidate");
-      [ttTimer invalidate];
-      ttTimer = nil;
-    }
+  [self _invalidateTimer];
+  [self _closeToolTipWindow];
 
   [super mouseDown:theEvent];
 }
 
 - (void)mouseMoved:(NSEvent *)theEvent
 {
+  NSPoint mouseLocation;
+  NSPoint origin;
+
+//  NSLog(@"mouseMoved");
   mouseLocation = [NSEvent mouseLocation];
-//  NSLog (@"mouseMoved %f %f", mouseLocation.x, mouseLocation.y);
-  if (ttWindow && [ttWindow isVisible])
-    {
-      [ttWindow orderOut:self];
-    }
-}
-
-//
-// Tool Tips
-//
-
-- (void)_invalidateToolTip:(NSTimer *)timer
-{
-  [timer invalidate];
-  timer = nil;
-
-  if (ttWindow && [ttWindow isVisible])
-    {
-      [ttWindow orderOut:self];
-    }
-}
-
-- (NSToolTipTag) addToolTipRect: (NSRect)aRect
-                          owner: (id)anObject
-                       userData: (void *)data
-{
-  SEL ownerSelector = @selector(view:stringForToolTip:point:userData:);
   
-/*  if (aRect == NSZeroRect)
-    {
-      return;
-    }*/
+  origin = NSMakePoint(mouseLocation.x + 8, 
+		       mouseLocation.y - 16 - [ttWindow frame].size.height);
 
+  [ttWindow setFrameOrigin:origin];
+}
+
+- (NSToolTipTag)addToolTipRect:(NSRect)aRect
+                         owner:(id)anObject
+                      userData:(void *)data
+{
+  SEL               ownerSelector;
+  NSTrackingRectTag tag;
+  
+  if (NSEqualRects(aRect,NSZeroRect) || ttTimer != nil)
+    {
+      return -1;
+    }
+
+  ownerSelector = @selector(view:stringForToolTip:point:userData:);
   if (![anObject respondsToSelector:ownerSelector] 
       && ![anObject isKindOfClass:[NSString class]])
     {
+      return -1;
+    }
+
+  // Set rect tracking
+  tag = [[self superview] addTrackingRect:aRect
+                                    owner:self
+                                 userData:data
+                             assumeInside:NO];
+
+  return tag;
+}
+   
+- (void)removeToolTip:(NSToolTipTag)tag
+{
+  [self removeTrackingRect:tag];
+//  [toolTips removeObjectForKey:[NSNumber numberWithInt:tag]];
+}
+                              
+- (void)removeAllToolTips
+{
+  int               i, j;
+  GSTrackingRect    *tr = nil;
+
+  if (_hasTooltips == NO)
+    {
       return;
     }
 
-  tRectTag = [[self superview] addTrackingRect:aRect
-                                         owner:self
-                                      userData:data
-                                  assumeInside:NO];
-  [[self window] setAcceptsMouseMovedEvents:YES];
-  
-  if (ttTimer == nil)
+  [self _invalidateTimer];
+  [self _closeToolTipWindow];
+
+  j = [_tracking_rects count];
+  for (i = 0; i < j; i++)
     {
-      ttTimer = [NSTimer
-	scheduledTimerWithTimeInterval:0.5
-	                        target:self
-			      selector:@selector(showTooltip:)
-			      userInfo:nil
-                               repeats:YES];
+      tr = [_tracking_rects objectAtIndex:i];
+      [self removeTrackingRect:tr->tag];
     }
 
-  return 0;
+  mainToolTip = -1;
+  _hasTooltips = NO;
 }
    
-- (void) removeAllToolTips
+- (void)setToolTip:(NSString *)string
 {
-}
-   
-- (void) removeToolTip: (NSToolTipTag)tag
-{
-}
-                              
-- (void) setToolTip: (NSString *)string
-{
-  ASSIGN(_toolTipText, string);
-
-  if (string == nil)
+  NSTrackingRectTag tag;
+  NSRect            rect;
+  
+  if (string == nil) // Remove tooltip
     {
-      _hasTooltip = NO;
-      if (ttTimer != nil)
+      if (_hasTooltips)
 	{
+	  [self _invalidateTimer];
+	  [self _closeToolTipWindow];
+	  [self removeToolTip:mainToolTip];
+	  mainToolTip = -1;
+	  _hasTooltips = NO;
 	}
     }
-    
-  if (_hasTooltip)
+  else
     {
-      tRectTag = [[self superview] addTrackingRect:[self frame]
-	                                     owner:self
-                                          userData:nil
-                                      assumeInside:NO];
-      [[self window] setAcceptsMouseMovedEvents:YES];
+//      NSLog(@"setToolTip");
+      rect = [self frame];
+      rect.origin.x = 0;
+      rect.origin.y = 0;
+      tag = [self addTrackingRect:rect
+                            owner:self
+                         userData:string
+                     assumeInside:NO];
+      _hasTooltips = YES;
     }
 }
    
-- (NSString *) toolTip
+- (NSString *)toolTip
 {
-  return _toolTipText;
+  NSEnumerator   *enumerator = [_tracking_rects objectEnumerator];
+  GSTrackingRect *tr = nil;
+  
+  while ((tr = [enumerator nextObject]))
+    {
+      if (tr->tag == mainToolTip)
+	{
+	  return tr->user_data;
+	}
+    }
+  
+  return nil;
 }
 
 @end
